2015-12-07  Deniz Yuret  <dyuret@ku.edu.tr>

	* compiler-optimizations:
	+ check mnist2 ygold specified when there is no return
	+ check pkg.status

	* linreg: 0.74s -> 1.04s for 5 epochs
	+ initialization only? no, for 20 epochs 2.88->3.92s, means init:26.6ms->80ms, iter:142.6ms->192ms
	+ multiple initialization?  no, confirmed initforw and initback only entered once.
	+ extra alloc/copy? 5 epoch, 10K epochsize, 20 batchsize, 500 batch/epoch, 2500 batches, expect few alloc, 5000 copy.
	got 2505 alloc, 7500 copy: 1 alloc, 3 copy per batch + 5 alloc at init.
	copy!: loss:134(ygold->ygrad ok), forw:42(input->reg ok), loss:144 (ygold->temp in quadloss2)
	alloc: 2*initforw:125, 2*initback:19, +1*initforw:125, loss:143(repeats)
	OK, reduced it to 3 copy per iter, got rid of quadloss temp alloc.
	time improved to 0.90s for 5 epochs, 3.58 for 20 epochs
	+ stack cost?

	* TODO:

	0000 - bmul!, baddforw!: make broadcasting ops take small array in either position, fix infersize by having a second pass that assumes add/mul are not broadcasting.
	0000 Start investigating (1) slightly different results, (2) speed and memory issues before going any further.
	0000 addingirnn: slow
	0000 addinglstm: gives slightly different result.
	0000 axpb -> copy (already defined as an actf?)
	0000 cannot add three terms, fix in compiler (a+b+c)
	0000 copy!: softloss@loss.jl:67 ygold copied for gradient. however this may happen twice one for 2arg one for 3arg version of softloss.  prevent that.
	0000 copyseq: gives slightly different result.  Warning: ygold when no return.
	0000 examples: use as_symbols option for parse_args
	0000 length(Adding.net.sdict) => 91 after one minibatch, normal?
	0000 linreg: slow
	0000 mnist2d: slow
	0000 mnist2dx: slow
	0000 mnist2dxy: slow
	0000 mnist2dy: slow
	0000 mnist4d: giving out-of-memory error.
	0000 mnistpixels: gives slightly different result.
	0000 reimplement array sharing, make it an optional pass for debugging